# EE6470_Many_Core_System_HW

./: README.md
hw2/systemC_partI/: Makefile
hw3/: README.md
hw3/systemC/: Medium.cpp  Medium.h  Testbench.cpp  filter_def.h
hw3/systemC_nogit/: Medium.cpp  Medium.h  Testbench.cpp
hw3/systemC_partI/: Medium.cpp  Medium.h  Testbench.cpp  Testbench.h  filter_def.h  main.cpp
hw5/: README.md
hw5/lenet_SCML/: README.rst
hw5/lenet_SCML/platform/src/testbench/: Op.cpp
hw5/lenet_SCML_decompose/platform/src/: main.cpp
hw5/lenet_SCML_decompose/platform/src/testbench/: Op.cpp
hw5/lenet_layer3_SCML/platform/src/: main.cpp
hw5/lenet_layer3_SCML_decompose/platform/src/: main.cpp
hw6/: README.md
hw6/Stratus_pooling/: SobelFilter.cpp  SobelFilter.h  System.cpp  System.h  Testbench.cpp  Testbench.h
hw6/Stratus_pooling/stratus/: project.tcl
hw6/Stratus_pooling_decompose/: SobelFilter.cpp  SobelFilter.h  Testbench.cpp  Testbench.h  project.tcl
hw6/lenet_SCML/platform/src/: main.cpp
hw7/: README.md  README.rst
hw7/application/src/: CMakeLists.txt
hw7/application/src/lenet_hw/: CMakeLists.txt  Op.cpp
hw7/application/src/lenet_sw/: CMakeLists.txt
hw8/: README.md  README.rst
hw8/application/src/: CMakeLists.txt
hw8/application/src/lenet_sw/: BaremetalDNN_Toplevel.cpp  BaremetalDNN_Toplevel.h  BaremetalDNN_main.cpp  CMakeLists.txt  Op.cpp  ShapeTy.h  lenet_sw.cpp
sobel_sw/: README.md
sobel_sw/software/: Makefile  medium  medium.cpp  sobel
sobel_sw/systemC/: Makefile  Medium.cpp  Medium.h  Medium_old.cpp
(+16 files in other folders)
